<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.opitz_consulting.expo_giveaway.view.activities.MainActivity">


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.437"/>


    <TextView
            android:id="@+id/tv_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/counter"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_number"/>

    <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_count_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/resetButton"/>




    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:onClick="resetButtonClicked"/>

    <TextView
            android:text="@string/beaconLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.3"/>

    <TextView
            android:text="@string/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
            android:text="@string/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
            android:text="@string/waittimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_beacon"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:layout_marginTop="0dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_status"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_beacon"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_distance"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_status"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_waittime"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_distance"/>


</android.support.constraint.ConstraintLayout>
